// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OwedBadge With player being owed Renders badge with p1 being owed 1 1`] = `
<PopUpMenu
  extraClasses="players__paid-button players__paid-button--1"
  options={
    Array [
      Object {
        "onClick": [Function],
        "text": "Player 1 was paid back",
        "type": "button",
      },
    ]
  }
  side="left"
>
  <span
    aria-labelledby="Player 1 is owed"
    className="players__player-owed"
    role="img"
  >
    🌟
  </span>
</PopUpMenu>
`;

exports[`OwedBadge With player being owed Renders badges with p1 being owed > 1 1`] = `
<PopUpMenu
  extraClasses="players__paid-button players__paid-button--1"
  options={
    Array [
      Object {
        "onClick": [Function],
        "text": "Player 1 was paid back",
        "type": "button",
      },
    ]
  }
  side="left"
>
  <span
    aria-labelledby="Player 1 is owed"
    className="players__player-owed"
    role="img"
  >
    🌟
  </span>
  <span
    className="players__owed-multiple"
  >
    2
  </span>
</PopUpMenu>
`;

exports[`OwedBadge With player being owed Renders badges with p2 being owed > 1 1`] = `
<PopUpMenu
  extraClasses="players__paid-button players__paid-button--2"
  options={
    Array [
      Object {
        "onClick": [Function],
        "text": "Player 2 was paid back",
        "type": "button",
      },
    ]
  }
  side="right"
>
  <span
    aria-labelledby="Player 2 is owed"
    className="players__player-owed"
    role="img"
  >
    🌟
  </span>
  <span
    className="players__owed-multiple"
  >
    2
  </span>
</PopUpMenu>
`;

exports[`OwedBadge With player being owed Renders badges with p2 being owed 1 1`] = `
<PopUpMenu
  extraClasses="players__paid-button players__paid-button--2"
  options={
    Array [
      Object {
        "onClick": [Function],
        "text": "Player 2 was paid back",
        "type": "button",
      },
    ]
  }
  side="right"
>
  <span
    aria-labelledby="Player 2 is owed"
    className="players__player-owed"
    role="img"
  >
    🌟
  </span>
</PopUpMenu>
`;

exports[`OwedBadge With player not being owed Renders nothing for p1 1`] = `""`;

exports[`OwedBadge With player not being owed Renders nothing for p2 1`] = `""`;
